--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
 	<!--Link to Bootstrap-->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body style="background-color: gray">
@@ -12,86 +13,87 @@
 <!--Header-->
 
 <div class="container-fluid">
-<div class="row" style="background-color: white">
-	<div class="col-sm-3" style="background-color: green">
-		<h1 style="color:white">Mary Hall</h1>
+	<div class="row" style="background-color: white">
+		<div class="col-sm-3" style="background-color: green">
+			<h1 style="color:white">Mary Hall</h1>
+		</div>
+		<div class="col-sm-3">
+		</div>
+		<div class="col-sm-6">
+			<nav class="navbar navbar-default">
+				<ul class="nav navbar-nav">
+					<li><a href="index.html">About</a>
+					<li class="active_background"><a href="portfolio.html" class="active_link">Portfolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</div>
 	</div>
-	<div class="col-sm-3">
-	</div>
-	<div class="col-sm-6">
-		<nav class="navbar navbar-default">
-		<ul class="nav navbar-nav">
-			<li class="active"><a href="index.html">About</a>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-		</nav>
-	</div>
-</div>
+
 <br>
 <!--Portfolio-->
 
-<div class="row" style="background-color: white">
-	<div class="col-md-3">
-		<h1 style="color:green">Portfolio</h1>
-			<div class="thumbnail">
-				<img src="assets/images/karoke app.jpg"
+	<div class="row" style="background-color: white">
+		<div class="col-md-3">
+			<h1 style="color:green">Portfolio</h1>
+				<div class="thumbnail">
+					<img src="assets/images/karoke app.jpg"
 					alt="Karoke App" style="width:100%">
-			<div class="caption">
-				<p>Karoke App</p>
-			</div>
-			</div>
-		<div class="thumbnail">
-			<img src="assets/images/Recipe Finder App.jpg"
-				alt="Recipe Finder App" style="width:100%">
-			<div class="caption">
-				<p>Recipe Finder App</p>
-			</div>
-			</div>
-		<div class="thumbnail">
-			<img src="assets/images/Studio Recording App.jpg"
-				alt="Recipe Finder App" style="width:100%">
-			<div class="caption">
-				<p>Studio Recording App</p>
-			</div>
-			</div>
+					<div class="caption">
+					<p>Karoke App</p>
+					</div>
+				</div>
+				<div class="thumbnail">
+					<img src="assets/images/Recipe Finder App.jpg"
+					alt="Recipe Finder App" style="width:100%">
+					<div class="caption">
+					<p>Recipe Finder App</p>
+					</div>
+				</div>
+				<div class="thumbnail">
+					<img src="assets/images/Studio Recording App.jpg"
+					alt="Recipe Finder App" style="width:100%">
+					<div class="caption">
+					<p>Studio Recording App</p>
+					</div>
+				</div>
 		</div>
 	<div class="col-md-3">
 		<h1 style="color:white">Placeholder text</h1>
-		<div class="thumbnail">
-			<img src="assets/images/Strategy Game.jpg"
+			<div class="thumbnail">
+				<img src="assets/images/Strategy Game.jpg"
 				alt="Strategy Game" style="width:100%">
-		<div class="caption">
-			<p>Strategy Game</p>
-		</div>
-		</div>
-		<div class="thumbnail">
-			<img src="assets/images/Tic-Tac-Toe.jpg"
-				alt="Tic-Tac-Toe" style="width:100%">
-		<div class="caption">
-			<p>Tic-Tac-Toe</p>
+				<div class="caption">
+				<p>Strategy Game</p>
+				</div>
 			</div>
+			<div class="thumbnail">
+				<img src="assets/images/Tic-Tac-Toe.jpg"
+				alt="Tic-Tac-Toe" style="width:100%">
+				<div class="caption">
+				<p>Tic-Tac-Toe</p>
+				</div>
 			</div>
 	</div>
 	<div class="col-md-2" style="background-color: gray">
 	</div>
 	<div class="col-md-4">
 		<h1 style="color:green">Connect with Me</h1>
-		<a href="https://github.com/MaryHall17/" target="_blank">
-			<img src="assets/images/if_github2_252065.png" alt= "GitHub Icon" img class="icons">
-		</a>
-		<a href="https://www.linkedin.com/in/mary-hall-935593b1/" target="_blank">
-			<img src="assets/images/if_square-linkedin_317725.png" alt= "LinkedIn Icon" img class="icons">
-		</a>
-		<a href="https://stackoverflow.com/users/8581994/mary-hall/" target="_blank"> 
-			<img src="assets/images/if_overflow_334695.png" alt="Stack Overflow Icon" img class="icons">
-		</a>
+			<a href="https://github.com/MaryHall17/" target="_blank">
+				<img src="assets/images/if_github2_252065.png" alt= "GitHub Icon" img class="icons">
+			</a>
+			<a href="https://www.linkedin.com/in/mary-hall-935593b1/" target="_blank">
+				<img src="assets/images/if_square-linkedin_317725.png" alt= "LinkedIn Icon" img class="icons">
+			</a>
+			<a href="https://stackoverflow.com/users/8581994/mary-hall/" target="_blank"> 
+				<img src="assets/images/if_overflow_334695.png" alt="Stack Overflow Icon" img class="icons">
+			</a>
 	</div>
 </div>
 
 <!--Footer-->
 <div class="row" style="background-color:gray">
-<p>&#169; 2017 Mary Hall</p>
+	<p>&#169; 2017 Mary Hall</p>
 </div>
 </div>
 
